# rusteroids

./: Cargo.toml  README.md  index.html  run.sh
crates/rusteroids/: Cargo.toml
crates/rusteroids/src/: camera.rs  lib.rs  main.rs  mesh.rs  renderer.rs  shader.wgsl  utils.rs
crates/rusteroids/wgpu_utils/: Cargo.toml
crates/rusteroids/wgpu_utils/src/: lib.rs
crates/rusteroids/wgpu_utils/vertex_attribute_derive/: Cargo.toml
crates/rusteroids/wgpu_utils/vertex_attribute_derive/src/: lib.rs
crates/wgpu_utils/: Cargo.toml
crates/wgpu_utils/derive/: Cargo.toml
crates/wgpu_utils/derive/src/: lib.rs
crates/wgpu_utils/internals/: Cargo.toml
crates/wgpu_utils/internals/src/: bind_groups.rs  lib.rs  vertex_format.rs
crates/wgpu_utils/src/: lib.rs
crates/wgpu_utils/vertex_attribute_derive/: Cargo.toml
crates/wgpu_utils/vertex_attribute_derive/src/: lib.rs
crates/wgpu_utils/wgpu_utils_base/: Cargo.toml
crates/wgpu_utils/wgpu_utils_base/src/: lib.rs
src/: camera.rs  lib.rs  logic.rs  mesh.rs  renderer.rs  shader.wgsl  state.rs  utils.rs
